--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-<<<<<<< HEAD
     xmlns:tools="http://schemas.android.com/tools"
-=======
->>>>>>> 181ec160da02e628d6cc439edafd4c9577bf954d
     package="com.example.filer">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
@@ -11,14 +8,9 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-<<<<<<< HEAD
         android:label="Filer"
         android:icon="@mipmap/ic_launcher"
         >
-=======
-        android:label="filer"
-        android:icon="@mipmap/ic_launcher">
->>>>>>> 181ec160da02e628d6cc439edafd4c9577bf954d
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -31,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-<<<<<<< HEAD
+        <activity android:name="io.github.edufolly.fluttermobilevision.ocr.OcrCaptureActivity" />
 
         <meta-data
             android:name="flutterEmbedding"
@@ -49,17 +41,10 @@
                 />
         </provider>
 
-
     </application>
-
-=======
-        <!-- Don't delete the meta-data below.
-             This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
-        <meta-data
-            android:name="flutterEmbedding"
-            android:value="2" />
-    </application>
->>>>>>> 181ec160da02e628d6cc439edafd4c9577bf954d
+    
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
