OCR Recognition & Beta Release

--- a/inAppUpdate.json
+++ b/inAppUpdate.json
@@ -1,7 +1,7 @@
 {
     "name":"Filer",
-    "version":"1.0.1",
-    "date":"3 Jun 2020",
-    "desc":"OCR Update",
-    "download":"https://appsenjoy.com/download/1b00f2446d277cb6486c3142df8c65b4.html"
+    "version":"1.0.2",
+    "date":"3 Jul 2020",
+    "desc":"OCR Update, beta Testing cloud storage",
+    "download":"https://rb.gy/j1wmjd"
 }
