--- a/inAppUpdate.json
+++ b/inAppUpdate.json
@@ -3,5 +3,5 @@
     "version":"1.0.2",
     "date":"3 Jul 2020",
     "desc":"OCR Update, beta Testing cloud storage",
-    "download":"https://rb.gy/j1wmjd"
+    "download":"https://rb.gy/vagaur"
 }
