--- a/inAppUpdate.json
+++ b/inAppUpdate.json
@@ -3,5 +3,5 @@
     "version":"1.0.2",
     "date":"3 Jul 2020",
     "desc":"OCR Update, beta Testing cloud storage",
-    "download":"https://drive.google.com/file/d/1sLPN5upr7RVGByhApul56BEx-CLzDs1r/view?usp=sharing"
+    "download":"https://drive.google.com/file/d/18XBP16DFlMxCzlfC3rFs_t7CKYcLTd8l/view?usp=drivesdk"
 }
