--- a/inAppUpdate.json
+++ b/inAppUpdate.json
@@ -3,5 +3,5 @@
     "version":"1.0.3",
     "date":"3 Jul 2020",
     "desc":"made some Improvements, addded Google Auth",
-    "download":"https://drive.google.com/file/d/1M7ncPtxPf4A6n9oKDs1_oJ2GcCftTDBW/view?usp=sharing"
+    "download":"https://drive.google.com/file/d/1y0lVJswwk95N3lkS1Gr2on5wtC6uCBoi/view?usp=drivesdk"
 }
